--- a/css/styles.css
+++ b/css/styles.css
@@ -92,15 +92,30 @@ p {
   display: flex;
   
 }
+.current{
+  position: relative;
+  color: #404bbf;
+}
+.current::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  border-radius: 2px;
+  width: 100%;
+  height: 4px;
+  background: #404bbf;
+}
 
 .nav-link {
   padding: 24px 0;
-  display: flex;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  display: block;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav-link:hover,
 .nav-link:focus {
@@ -115,6 +130,7 @@ p {
   letter-spacing: 0.02em;
   color: #434455;
   font-style: normal;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contact-list {
   gap: 40px;
@@ -138,7 +154,11 @@ p {
 }
 
 .main-sect {
-  background-color: #2e2f42;
+  background-color: #2e2f42;;
+  background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office\ 1.jpg);
+  
+  background-repeat: no-repeat;
+  background-size: 100%;
   padding-top: 188px;
   padding-bottom: 188px;
 }
@@ -174,7 +194,8 @@ p {
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: #fff;
-  
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   
 }
 .main-button:hover,
@@ -197,9 +218,18 @@ p {
   overflow: hidden;
 }
 .headline-cont{
- 
- 
-}
+ }
+ .icon-item{
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  width: 264px;
+  height: 112px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #f4f4fd;
+  margin-bottom: 8px;
+ }
 .headline {
   padding-top: 120px;
   padding-bottom: 120px;
@@ -237,7 +267,36 @@ p {
 }
 
 /*====================OurTeam======================*/
+.icon{
+  gap: 24px;
+  padding: 16px;
+  display: flex;
+  justify-content: center;
+}
+.team-contact{
 
+}
+.team-icon-link{
+  background-color: #4d5ae5;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+.team-icon{
+  fill: #f4f4fd;
+  justify-content: center;
+  align-items: center;
+
+}
+.team-icon-link:hover,
+.team-icon-link:focus {
+  background-color: #404bbf;
+}
 .ourteam-main {
   text-align: center;
   background-color: #f4f4fd;
@@ -272,6 +331,7 @@ p {
   width: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
   background-color: #ffffff;
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .ourteam-img {
@@ -314,11 +374,18 @@ p {
   text-transform: uppercase;
   color: #4d5ae5;
 }
+
 .foo-logo {
   color: #f4f4fd;
 }
+
 .cont-footer{
-  text-align: left;
+  display: flex;
+  align-items: baseline;
+}
+
+.cont-footer-text{
+  margin-right: 120px;
 }
 
 .footer-text {
@@ -328,6 +395,35 @@ p {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
+}
+
+.footer-icon-item{
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-icon-link:hover,
+.footer-icon-link:focus{
+  background-color: #31d0aa;
+}
+.footer-icon-link{
+
+}
+
+.footer-icon-list{
+  gap: 16px;
+  display: flex;
+}
+.footer-cont-icon{
+
+}
+.social-media{
+  font-family: "Roboto", sans-serif;
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #fff;
+margin-bottom: 16px;
 }
 .ourportfolio {
   padding: 120px 0 120px 0
@@ -351,6 +447,10 @@ p {
 }
 .ourportfolio-item {
   width: calc((100% - 24px * 2) / 3);
+  cursor: pointer;
+}
+.ourportfolio-item:hover{
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 
 }
 .ourportfolio-img {
