--- a/css/styles.css
+++ b/css/styles.css
@@ -195,7 +195,7 @@ p {
   letter-spacing: 0.04em;
   color: #fff;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 2500ms cubic-bezier(0.4, 0, 0.2, 1);
   
 }
 .main-button:hover,
@@ -426,7 +426,7 @@ color: #fff;
 margin-bottom: 16px;
 }
 .ourportfolio {
-  padding: 120px 0 120px 0
+  padding: 120px 0;
 }
 .ourportfolio-cont{
 }
@@ -438,6 +438,7 @@ margin-bottom: 16px;
   line-height: 1.11;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  text-align: center;
 }
 .ourportfolio-list {
   display: flex;
@@ -445,9 +446,16 @@ margin-bottom: 16px;
   flex-wrap: wrap;
   
 }
+.ourportfolio-item-cont{
+  position: relative;
+  overflow: hidden;
+}
 .ourportfolio-item {
   width: calc((100% - 24px * 2) / 3);
   cursor: pointer;
+}
+.ourportfolio-item:hover .ourportfolio-item-dropdown{
+  transform: translateY(0);
 }
 .ourportfolio-item:hover{
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
@@ -481,4 +489,20 @@ margin-bottom: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+}
+.ourportfolio-item-dropdown{
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  position: absolute;
+  top: 0;
+  background-color: #4d5ae5;
+  height: 100%;
+  padding-bottom: 164px;
+  padding: 40px 32px;
+  display: flex;
+  align-items: center;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
