--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@ p {
 }
 .container{
   width: 1158px;
-  
+  padding: 0 15px;
   margin: 0 auto;
 }
 .header {
@@ -156,9 +156,9 @@ p {
 .main-sect {
   background-color: #2e2f42;;
   background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office\ 1.jpg);
-  
+  background-position: center;
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-size: cover;
   padding-top: 188px;
   padding-bottom: 188px;
 }
@@ -491,18 +491,21 @@ margin-bottom: 16px;
   color: #434455;
 }
 .ourportfolio-item-dropdown{
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #f4f4fd;
-  position: absolute;
-  top: 0;
-  background-color: #4d5ae5;
-  height: 100%;
-  padding-bottom: 164px;
-  padding: 40px 32px;
-  display: flex;
-  align-items: center;
-  transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
+    position: absolute;
+    top: 0;
+    background-color: #4d5ae5;
+    height: 100%;
+    padding-bottom: 164px;
+    padding: 40px 32px;
+    display: flex;
+    align-items: left;
+    text-align: left;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
