--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,8 @@ p {
   margin: 0 auto;
 }
 .header {
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
   color: #4d5ae5;
   border-bottom: 1px solid #e7e9fc;
   
@@ -188,14 +190,14 @@ p {
   height: 56px;
   font-family: "Roboto", sans-serif;
   cursor: pointer;
-  background: #4d5ae5;
+  background-color: #4d5ae5;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: #fff;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-  transition: color 2500ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   
 }
 .main-button:hover,
